# pr-contacts

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  run_extraction.py
src/: __init__.py  categorizer.py  company_resolver.py  config.py  contact_extractor.py  country_detector.py  database.py  gmail_client.py  mbox_client.py  utils.py  website_fetcher.py
